fix horizontal scrolling when in small window

--- a/kifi-backend/modules/shoebox/angular/src/layout/main/main.styl
+++ b/kifi-backend/modules/shoebox/angular/src/layout/main/main.styl
@@ -1,6 +1,7 @@
 .kf-logged-in .kf-main
   min-width: 454px
   width: calc(100% - 310px)
+  margin-top: 15px
 
   @media screen and (max-width: 1280px)
     width: calc(100% - 270px)
