--- a/kifi-backend/modules/shoebox/angular/src/layout/rightCol/rightCol.styl
+++ b/kifi-backend/modules/shoebox/angular/src/layout/rightCol/rightCol.styl
@@ -1,4 +1,6 @@
 .kf-col-right
+  margin-top: 5px
   width: 310px
   @media screen and (max-width: 1280px)
     width: 270px
+
