--- a/kifi-backend/modules/shoebox/angular/src/layout/sidebar/sidebar.styl
+++ b/kifi-backend/modules/shoebox/angular/src/layout/sidebar/sidebar.styl
@@ -2,11 +2,14 @@
   position: fixed
   width: 270px
   padding: 0 0 0 20px
-  border-right: 1px solid #dbdee3
   z-index: 1
 
   .kf-tag-count
     float: right
+
+.kf-sidebar-inner
+  margin-top: 15px
+  border-right: 1px solid #dbdee3
 
 .kf-sidebar-nav
   margin: 0 40px 0 20px
